# WritingGit

./: .gitignore  .pre-commit-config.yaml  README.md  libwyag.py  pyproject.toml
.github/workflows/: ci.yml
src/: libwyag.py  wyagog.py
src/wyag/: __init__.py  __main__.py  cli.py  repository.py
src/wyag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/wyag/commands/: __init__.py  init.py
tests/: conftest.py
tests/test_functional/: test_init_command.py
tests/test_units/: test_repository.py
utils/: git_repository.py  path_utils.py
